--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,8 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Fighting Spirit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
 }
 
 @keyframes float {
